@@ -144,6 +144,10 @@
 # password_file acl_file psk_file auth_plugin auth_opt_* allow_anonymous
 # auto_id_prefix allow_zero_length_clientid
 #
+# Note that if set to true, then a durable client (i.e. with clean session set
+# to false) that has disconnected will use the ACL settings defined for the
+# listener that it was most recently connected to.
+#
 # The default behaviour is for this to be set to false, which maintains the 
 # setting behaviour from previous versions of mosquitto.
 #per_listener_settings false
